Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -193,8 +193,8 @@
    "outputs": [],
    "source": [
     "def parse_trips(trips):\n",
-    "    pickuplocanddist\n",
-    "    return"
+    "    pickuplocanddist = []\n",
+    "    return "
    ]
   },
   {
