--- a/index.ipynb
+++ b/index.ipynb
@@ -232,12 +232,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def float_values(trips):    \n",
-    "    return float()"
+    "    return float(parsed_trips)"
    ]
   },
   {
