Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -446,7 +446,7 @@
    "outputs": [],
    "source": [
     "def location(trip):\n",
-    "    return trip['pickup_latitute'], trip['pickup_longit']"
+    "    return trip['pickup_latitute'], trip['pickup_longitude']"
    ]
   },
   {
