--- a/index.ipynb
+++ b/index.ipynb
@@ -441,12 +441,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "def location(trip):\n",
-    "    [trip['pickup_latitude'], trip['pickup_longitude']]"
+    "    return [trip['pickup_latitude'], trip['pickup_longitude']]"
    ]
   },
   {
