--- a/index.ipynb
+++ b/index.ipynb
@@ -484,7 +484,7 @@
    "outputs": [],
    "source": [
     "def to_marker(location):\n",
-    "    marker = folium.CircleMarker(location = first_location)"
+    "    marker = folium.CircleMarker(location,)"
    ]
   },
   {
