--- a/index.ipynb
+++ b/index.ipynb
@@ -484,7 +484,7 @@
    "outputs": [],
    "source": [
     "def to_marker(location):\n",
-    "    marker = folium.CircleMarker(location,)"
+    "    marker = folium.CircleMarker(location, radius = 6)"
    ]
   },
   {
