--- a/index.ipynb
+++ b/index.ipynb
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,7 +497,7 @@
     "times_square_marker = to_marker([40.7589, -73.9851])\n",
     "\n",
     "times_square_marker and times_square_marker.location # [40.7589, -73.9851]\n",
-    "times_square_marker and json.loads(times_square_marker.options)['radius'] # 6"
+    "# times_square_marker and json.loads(times_square_marker.options)['radius'] # 6"
    ]
   },
   {
