--- a/index.ipynb
+++ b/index.ipynb
@@ -560,13 +560,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1000"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "trip_markers and len(trip_markers) # 1000\n",
     "\n",
-    "list(map(lambda marker: marker.location, trip_markers[0:4]))\n",
+    "# list(map(lambda marker: marker.location, trip_markers[0:4]))\n",
     "# [[40.64499, -73.78115],\n",
     "#  [40.766931, -73.982098],\n",
     "#  [40.77773, -73.951902],\n",
